[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/childScenes/player_infoScreen/Node2D2.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player_infoScreen/shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player_infoScreen/box1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/Before we start.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player_infoScreen/field.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/My name is.png" type="Texture" id=6]
[ext_resource path="res://textEditTheme.tres" type="Theme" id=7]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/I am a.png" type="Texture" id=8]
[ext_resource path="res://scenes/childScenes/player_infoScreen/femaleStaticBody2D.gd" type="Script" id=9]
[ext_resource path="res://assets/sprites/player_infoScreen/player_sex/girl.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player_infoScreen/player_sex/boy.png" type="Texture" id=11]
[ext_resource path="res://scenes/childScenes/player_infoScreen/startStaticBody2D.gd" type="Script" id=12]
[ext_resource path="res://assets/sprites/player_infoScreen/Texts/English/Start.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=3]

resource_name = "info_player"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("white_background:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.259647 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("box1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.922667 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("before we start:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("my name is:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("i am a:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("i am a/femaleStaticBody2D/female:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("i am a/maleStaticBody2D/male:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("startStaticBody2D/start:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("my name is/TextEdit:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("black_background:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.558 ) ]
}

[node name="Node2D2" type="Node2D" index="0"]

position = Vector2( 498.284, 291.382 )
scale = Vector2( 10.6808, 7.17136 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="black_background" type="Sprite" parent="." index="0"]

self_modulate = Color( 1, 1, 1, 0.558 )
position = Vector2( 0.992664, 0.749508 )
scale = Vector2( 0.0789757, 0.140553 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="white_background" type="Sprite" parent="." index="1"]

self_modulate = Color( 1, 1, 1, 0.259647 )
position = Vector2( 1.25214, 1.07608 )
scale = Vector2( 0.0795095, 0.141183 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="before we start" type="Sprite" parent="." index="2"]

position = Vector2( 1.94458, -35.6107 )
scale = Vector2( 0.0932625, 0.144711 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="box1" type="Sprite" parent="." index="3"]

self_modulate = Color( 1, 1, 1, 0.922667 )
position = Vector2( 2.29236, -3.39697 )
scale = Vector2( 0.0175782, 0.0355092 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="my name is" type="Sprite" parent="." index="4"]

editor/display_folded = true
position = Vector2( -4.00773, -10.928 )
scale = Vector2( 0.0728085, 0.103731 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TextEdit" type="TextEdit" parent="my name is" index="0"]

modulate = Color( 0.929688, 0.864319, 0.864319, 0.900549 )
light_mask = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = 29.0
margin_right = 267.0
margin_bottom = 73.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 7 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "Material", "Pause", "Theme", "Visibility" ]

[node name="i am a" type="Sprite" parent="." index="5"]

editor/display_folded = true
position = Vector2( -8.40917, 10.3347 )
scale = Vector2( 0.0633886, 0.110655 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="femaleStaticBody2D" type="StaticBody2D" parent="i am a" index="0"]

position = Vector2( 152.26, 39.1463 )
scale = Vector2( 2.12783, 1.80474 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 9 )
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="female" type="Sprite" parent="i am a/femaleStaticBody2D" index="0"]

position = Vector2( -0.882156, 0.150368 )
scale = Vector2( 0.300926, 0.309537 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="i am a/femaleStaticBody2D" index="1"]

position = Vector2( -0.797577, -0.0249951 )
scale = Vector2( 3.0181, 3.10542 )
shape = SubResource( 1 )

[node name="maleStaticBody2D" type="StaticBody2D" parent="i am a" index="1"]

editor/display_folded = true
position = Vector2( 329.66, 39.1463 )
scale = Vector2( 2.12783, 1.80474 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="male" type="Sprite" parent="i am a/maleStaticBody2D" index="0"]

position = Vector2( -0.819275, -0.445023 )
scale = Vector2( 0.290082, 0.303805 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="i am a/maleStaticBody2D" index="1"]

position = Vector2( -0.765929, -0.104581 )
scale = Vector2( 2.91752, 3.03528 )
shape = SubResource( 2 )

[node name="startStaticBody2D" type="StaticBody2D" parent="." index="6"]

position = Vector2( 1.21966, 30.5545 )
scale = Vector2( 0.13254, 0.108723 )
input_pickable = true
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 12 )
_sections_unfolded = [ "Pickable", "Transform" ]

[node name="start" type="Sprite" parent="startStaticBody2D" index="0"]

position = Vector2( 1.2804, 2.85785 )
scale = Vector2( 0.522418, 0.962844 )
texture = ExtResource( 13 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="startStaticBody2D" index="1"]

build_mode = 0
polygon = PoolVector2Array( -14.1046, 22.6852, -16.9455, 25.2717, -20.4321, 24.3312, -23.5312, 21.9799, -25.3391, 17.9826, -26.8886, 14.6907, -27.7925, 7.87189, -26.8886, 5.2854, -25.8556, 4.81519, -27.0177, -0.828003, -27.276, -7.41174, -26.243, -10.9387, -23.9186, -15.4063, -20.8195, -18.463, -18.7534, -18.2278, -15.5251, -17.5225, -14.8794, -15.8765, -13.3299, -17.2874, -11.7803, -17.9927, -10.1016, -18.2278, -8.03549, -18.2278, -6.09854, -15.6414, -5.32376, -13.5252, -4.54898, -10.4685, -3.7742, -12.1144, -0.158508, -13.2901, 2.81149, -13.2901, 5.26495, -13.0549, 7.8476, -11.6442, 10.172, -11.1739, 13.0128, -11.1739, 14.8207, -11.1739, 15.7245, -14.7009, 17.4033, -17.5225, 19.4694, -17.5225, 22.9559, -17.7576, 24.7637, -16.5819, 25.9259, -11.6442, 26.3133, -9.76306, 27.2172, -7.88202, 28.1211, -2.70905, 28.2503, 1.28821, 28.2503, 4.81519, 27.6046, 5.2854, 26.8298, 8.34216, 26.8298, 13.7502, 26.4424, 19.1583, 25.5385, 22.6852, 21.7937, 26.2123, 18.9529, 25.0366, 17.0159, 23.1555, 15.8537, 21.5096, 14.5624, 18.4529, 14.3041, 20.569, 12.4963, 23.6258, 9.39716, 23.6258, -2.35376, 23.861, -4.6781, 21.9799, -8.29376, 24.3312, -10.6181, 23.6258 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/info_player = SubResource( 3 )
blend_times = [  ]

[connection signal="input_event" from="i am a/femaleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_femaleStaticBody2D_input_event"]

[connection signal="mouse_entered" from="i am a/femaleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_femaleStaticBody2D_mouse_entered"]

[connection signal="mouse_exited" from="i am a/femaleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_femaleStaticBody2D_mouse_exited"]

[connection signal="input_event" from="i am a/maleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_maleStaticBody2D_input_event"]

[connection signal="mouse_entered" from="i am a/maleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_maleStaticBody2D_mouse_entered"]

[connection signal="mouse_exited" from="i am a/maleStaticBody2D" to="i am a/femaleStaticBody2D" method="_on_maleStaticBody2D_mouse_exited"]

[connection signal="input_event" from="startStaticBody2D" to="startStaticBody2D" method="_on_startStaticBody2D_input_event"]

[connection signal="mouse_entered" from="startStaticBody2D" to="startStaticBody2D" method="_on_startStaticBody2D_mouse_entered"]

[connection signal="mouse_exited" from="startStaticBody2D" to="startStaticBody2D" method="_on_startStaticBody2D_mouse_exited"]


